# QtBCI

./: CMakeLists.txt  README.md  chartmodedialog.cpp  chartmodedialog.h  chartmodedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  saveconfigdialog.cpp  saveconfigdialog.h  saveconfigdialog.ui  serialconfigdialog.cpp  serialconfigdialog.h  serialconfigdialog.ui  单通道脑电开发文档.docx  wq
Net/: networkconfigdialog.cpp  networkconfigdialog.h  networkconfigdialog.ui  networkstreamsettings.cpp  networkstreamsettings.h  preprocchunkudpsender.cpp  preprocchunkudpsender.h  udptelemetryhub.cpp  udptelemetryhub.h
build_cmake/: CMakeCache.txt
core/: acquisitionengine.cpp  acquisitionengine.h  algorithmengine.cpp  algorithmengine.h  app_settings.h  csvlogworker.cpp  csvlogworker.h  fftfeatureextractor.cpp  fftfeatureextractor.h  logwbuffer.cpp  logwbuffer.h  psdfeatureextractor.cpp  psdfeatureextractor.h
device/: serialport.cpp
device/serial_eeg/: eeg_frame_assembler.cpp  eeg_frame_assembler.h  eeg_payload_parser.cpp  eeg_payload_parser.h  raw_to_uv_processor.cpp  raw_to_uv_processor.h
docs/: BrainFlow接入清单_适配当前三线程.md  OpenBCI与BrainFlow仓库精简及零配置构建指南.md  UDP与model在线推理结合指南.md  UDP接收端Python示例.md  UDP本地回环测试接入指南.md  三线程架构设计_采集算法绘图.md  会话重置与逻辑修复_代码示例.md  可移植配置_QtBCI.ini与exe同目录.md  操作日志待补充清单.md  更换图表三选一_缓存绘图方案.md  算法线程接入FFT频谱_记录与UI配置_代码示例.md  算法线程接入频谱与功率_代码示例.md  网络设置与多路UDP发送设计.md  采样率215Hz与组帧层时间戳丢包设计.md  预处理包装类_BrainFlowDataFilterPipeline.md
docs/examples/: preproc_udp_sender.cpp  preproc_udp_sender.h
openbci/: README.md
openbci/lib/mingw_64/: DataHandler.lib
preprocessing/: DataHandler32.lib  eeg_preprocess_pipeline.cpp  eeg_preprocess_pipeline.h
qt打包/: Inno Setup Compiler.lnk  打包顺序.docx
qt打包/resource_hacker/: ResourceHacker.ini
tests/legacy_thinkgear/: README.md  thinkgearlinktester.cpp  thinkgearlinktester.h
tests/legacy_thinkgear/stream_sdk_for_pc/: changetest.cpp  origintest.cpp  stream_sdk_for_pc.h  test_stream_for_pc_change.cpp  test_stream_sdk_for_pc.cpp
thinkgear/: rawtouvprocessor.h  thinkgearframeassembler.cpp  thinkgearframeassembler.h  thinkgearlinktester.cpp
ui/bridge/: uibridge.cpp  uibridge.h
ui/qml/components/: IndustrialButton.qml  IndustrialPanel.qml  SectionTitle.qml
安装包/1.0.0/: QtBCI.rar
开发文档/: UDP接收端Python示例.docx  单通道脑电开发文档5.14.docx
